--- a/nfs.yml
+++ b/nfs.yml
@@ -5,7 +5,7 @@
     - nfs_clients
   vars:
     - config_nfs_server: true
-    - config_nfs_clients: true
+    - config_nfs_clients: false
   tasks:
     - name: Configuring a NFS-server
       include_role:
