--- a/nfs-client/vars/main.yml
+++ b/nfs-client/vars/main.yml
@@ -2,6 +2,6 @@
 # vars file for nfs-client
 
 nfs_mounts:
-  - { src: "192.168.29.228:/nfs_share", dest: "/mount/nfs1", dest_host: nfs-client3, state: "mounted" }
-  - { src: "192.168.29.228:/mount/share", dest: "/mount/nfs2", dest_host: nfs-client4, state: "mounted" }
+  - { src: "192.168.1.91:/home/raza", dest: "/home/raza", state: "mounted" }
+  - { src: "192.168.1.91:/mount/NAS_Storage", dest: "/mount/nas", state: "mounted" }
 
