--- a/nfs-server/vars/main.yml
+++ b/nfs-server/vars/main.yml
@@ -1,7 +1,7 @@
 ---
 nfs_shares: 
-  - { share: "/nfs_share", hosts: "*", perms: "rx", other: "sync, no_root_squash" }
-  - { share: "/mount/share", hosts: "192.168.29.0/24", perms: "rw", other: "sync, no_root_squash" }
-  - { share: "/nfs/share", hosts: "192.168.29.105", perms: "rw", other: "sync, no_root_squash" }
+  - { share: "/home", mode: "0777", hosts: "*", perms: "rw", other: "sync,root_squash" }
+  - { share: "/mount/NAS_Storage", mode: "0777", hosts: "192.168.1.0/24", perms: "rw", other: "sync,root_squash" }
+  - { share: "/nfs/share", mode: "0777", hosts: "192.168.1.0/24", perms: "rw", other: "sync,no_root_squash" }
 
 
