--- a/nfs_user.yml
+++ b/nfs_user.yml
@@ -3,8 +3,8 @@
   hosts: nfs_server nfs_clients
   become: true
   tasks:
-  - name: Including centralize_usershomedirs role
+  - name: Including nfs-home role
     include_role: 
-      name: centralize_usershomedirs
+      name: nfs-home
 
 
